welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: not found: type boolean
def move(pas:Int, avant:boolean) = { if (avant=true) 
                        ^