welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(pas:Int, avant:boolean) = { if (avant=true) 
	for (i<-1 to pas) avance()
	else for (i<-1 to pas) recule()
}
